fix lint warning